--- a/assign4/css/styles.css
+++ b/assign4/css/styles.css
@@ -21,3 +21,8 @@ li[ui-sref]:hover {
   padding-left: 5px;
   padding-right: 5px;
 }
+
+/*.container {
+  display: flex;
+  flex-direction: row;
+}*/
